@startuml

title __PAINTENGLISH's Class Diagram__\n

  namespace paint {
    class paint.Circle {
    }
  }
  

  namespace paint {
    class paint.Drawing {
    }
  }
  

  namespace paint {
    class paint.Ellipse {
    }
  }
  

  namespace paint {
    abstract class paint.Figure {
    }
  }
  

  namespace paint {
    class paint.Point {
    }
  }
  

  namespace paint {
    class paint.Rectangle {
    }
  }
  

  namespace paint {
    class paint.Square {
    }
  }
  

  namespace paint {
    class paint.TestSwing {
    }
  }
  

  namespace paint {
    class paint.Window {
    }
  }
  

  paint.Circle -up-|> paint.Ellipse
  paint.Drawing .up.|> java.awt.event.MouseListener
  paint.Drawing .up.|> java.awt.event.MouseMotionListener
  paint.Drawing -up-|> javax.swing.JPanel
  paint.Ellipse -up-|> paint.Figure
  paint.Figure .up.|> java.io.Serializable
  paint.Figure o-- paint.Point : origin
  paint.Point .up.|> java.io.Serializable
  paint.Rectangle -up-|> paint.Figure
  paint.Square -up-|> paint.Rectangle
  paint.Window .up.|> java.awt.event.ActionListener
  paint.Window -up-|> javax.swing.JFrame
  paint.Window o-- paint.Drawing : draw


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
